--- a/index.html
+++ b/index.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>Rock Paper Scissors</title>
-    </head>
-    <body>
-        <script type="text/javascript" src="external.js"></script>
-    </body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Rock Paper Scissors</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+
+  <body>
+    <h1 class="header">Rock Paper and Scissors</h1>
+    <div class="round">Round 1</div>
+    <div class="options">
+      <button class="rock">Rock</button>
+      <button class="paper">Paper</button>
+      <button class="scissor">Scissor</button>
+    </div>
+    <div class="result"></div>
+    <div class="score"></div>
+    <script type="text/javascript" src="external.js"></script>
+  </body>
 </html>
