--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <h1 class="header">Rock Paper and Scissors</h1>
     <div class="round">Round 1</div>
     <div class="options">
-      <button class="rock">Rock</button>
-      <button class="paper">Paper</button>
-      <button class="scissor">Scissor</button>
+      <button id="Rock" class="rock">Rock</button>
+      <button id="Paper" class="paper">Paper</button>
+      <button id="Scissor" class="scissor">Scissor</button>
     </div>
     <div class="result"></div>
     <div class="score"></div>
