--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
 
   <body>
     <h1 class="header">Rock Paper and Scissors</h1>
+    <h2 id="h2">But this time with the computer</h2>
     <div class="round">Round 1</div>
     <div class="options">
-      <button id="Rock" class="rock">Rock</button>
-      <button id="Paper" class="paper">Paper</button>
-      <button id="Scissor" class="scissor">Scissor</button>
+      <button id="Rock" class="rock"></button>
+      <button id="Paper" class="paper"></button>
+      <button id="Scissor" class="scissor"></button>
     </div>
     <div class="result"></div>
     <div class="score"></div>
